# vids-content

./: .gitignore
copy_file_range/: README.md  benchmark.sh  main.c  main_with_copy_range.c  plot.py  setup_fs.sh
cpu-governor/: Vagrantfile  main.c
cpu-idle-governor/: Vagrantfile  main.c
file_hole/: list_holes.c  main.c
fork-vs-vfork/: fork.c  test.sh  vfork.c
getrandom/: main.c
huge-pages/: RESULT.md  naive.c  with_huge_pages.c  with_huge_pages_1gb.c
ieee-decimal/: CMakeLists.txt  example.cpp
inotify/: foo  main.c
mknod/: main.c
nice/: main.c  start_container.sh
node-addon-api/: CMakeLists.txt  example.cpp  vcpkg.json
parquet-delta-encoding/: generate.py
parquet-row-group/: generate.py
parquet-sort-for-rle/: generate.py
pybind11/: CMakeLists.txt  Makefile  example.cpp  notes.md  test.py
readv-writev/: apr_sendrecv.c  bench.sh  main.c  main_naive.c  nginx_writev_chain.c
sched-affinity/: REPORT.md  Vagrantfile  main.c  notes.md
signalfd/: main.c
static-initialization-fiasco/: Makefile  bar.cpp  foo.cpp  foo.h  main.cpp
tee-splice/: .gitignore  REPORT.md  TODO.md  bench.sh  bench_proxy.sh  llm_splice_copy.c  llm_tee_example.c  proxy.c  proxy_client.c  proxy_naive.c  proxy_sink.c  tee.c  tee_naive.c
timerfd/: main.c
traceroute/: icmp.c  icmp.h  main.c
umask/: main.c
unshare/: main.c
vmsplice/: REPORT.md  bench.c  bench_naive.c  main.c  recv.c
